@@ -1,3 +1,13 @@
+2016-07-31  Natalia Portillo  <claunia@claunia.com>
+
+	* Dir.cs:
+	* File.cs:
+	* Super.cs:
+	* Xattr.cs:
+	* Consts.cs:
+	* LisaFS.cs:
+	* Structs.cs: Added support for subcatalogs.
+
 2016-07-29  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.Filesystems.csproj: Bump to version 3.1.0.
